syntax = "proto3";
option java_package = "com.proto.prime";
option java_multiple_files = true;

service BeerService {
  rpc SignInDecomposition(SignInRequest) returns (SignInResponse) {};
  rpc CreateBeerDecomposition(CreateBeerRequest) returns (CreateBeerResponse) {};
  rpc QueryBeersDecomposition(QueryBeersRequest) returns (stream QueryBeersResponse) {};
  rpc QueryBeerByIdDecomposition(QueryBeerByIdRequest) returns (QueryBeerByIdResponse) {};
  rpc EditBeerDecomposition(EditBeerRequest) returns (EditBeerResponse) {};
  rpc DeleteBeerDecomposition(DeleteBeerRequest) returns (DeleteBeerResponse) {};
  rpc AddBeerToFavorite(AddBeerToFavoriteRequest) returns (AddBeerToFavoriteResponse) {};
  rpc RemoveBeerToFavorite(RemoveBeerToFavoriteRequest) returns (RemoveBeerToFavoriteResponse) {};
}

message SignInRequest {

}

message SignInResponse {

}

message CreateBeerRequest {

}

message CreateBeerResponse {

}

message QueryBeerByIdRequest {

}

message QueryBeerByIdResponse {

}

message QueryBeersRequest {

}

message QueryBeersResponse {
  bool isSuccess = 1;
}

message EditBeerRequest {

}

message EditBeerResponse {

}

message DeleteBeerRequest {

}

message DeleteBeerResponse {

}

message AddBeerToFavoriteRequest {

}

message AddBeerToFavoriteResponse {

}

message RemoveBeerToFavoriteRequest {

}

message RemoveBeerToFavoriteResponse {

}
